# VideoDownloader

./: CMakeLists.txt  build.bash  Шаги.txt
include/: httprequestsender.h  m3u8listinfo.h  resolution.h  segmentlist.h  video_downloader.h  videoinfo.h
src/: httprequestsender.cpp  m3u8listinfo.cpp  main.cpp  resolution.cpp  segmentlist.cpp  video_downloader.cpp  videoinfo.cpp
